--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -4,7 +4,7 @@
     <h1>
         TODO LIST
         <a href="" class="btn btn-primary link-to-page">
-          Create
+          Add task
         </a>
     </h1>
     <br>
