--- a/templates/app/tag_list.html
+++ b/templates/app/tag_list.html
@@ -5,7 +5,7 @@
 {% block content %}
     <h1>
         Tags
-        <a href="" class="btn btn-primary link-to-page">
+        <a href="{% url 'app:tag-create' %}" class="btn btn-primary link-to-page">
           Add
         </a>
     </h1>
@@ -18,8 +18,8 @@
       {% for tag in tag_list %}
       <tr>
         <td>{{ tag }}</td>
-        <td><a href="" class="btn btn-secondary">Update</a></td>
-        <td><a href="" class="btn btn-secondary">Delete</a></td>
+        <td><a href="{% url 'app:tag-update' pk=tag.id %}" class="btn btn-secondary">Update</a></td>
+        <td><a href="{% url 'app:tag-delete' pk=tag.id %}" class="btn btn-secondary">Delete</a></td>
       </tr>
       {% endfor %}
     </table>
